# TP_jmeilim_lehbibm

./: CMakeLists.txt  README.md  plot.py
cpp/cppma-spring2026-lab1/: ._CPPMA-Spring2026-Lab1
cpp/cppma-spring2026-lab1/CPPMA-Spring2026-Lab1/: ._CMakeLists.txt  ._trace.cxx  CMakeLists.txt  exe  gmon.out  report.txt
demo/: CMakeLists.txt  main.cxx
doc/: CMakeLists.txt  Diagramme_cas_utilisation  Diagramme_class_analyse.puml  Diagramme_etat_transition.puml  Diagramme_sequence.puml  analsye.txt  gmon.out
include/: Boundary.hxx  Cellule.hxx  Forces.hxx  GenereException.hxx  Lab2.hxx  Lab3.hxx  Lab4.hxx  Lab6.hxx  Particle.hxx  Stromer.hxx  Univers.hxx  Vector.hxx
src/: Boundary.cxx  CMakeLists.txt  Forces.cxx  Lab2.cxx  Lab3.cxx  Lab4.cxx  Lab6.cxx  Particle.cxx  Stromer.cxx  Univers.cxx  Vector.cxx  lab2  lab3  lab4  out.vtk.series  particules.txt  representaion_U_r.py  test  trace.cxx
test/: CMakeLists.txt  Climites.cxx  Forces.cxx  Stromer.cxx  Test1.cxx  Test2.cxx  Univers.cxx  absorption.cxx  periodique.cxx  reflexion.cxx  test_00.cxx  test_01.cxx  test_GenereException.cxx
